maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: value =< is not a member of Int
      while (virages=<4 && !northfound) {choix1()}
                    ^