maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var northfound=false
  var virages=0
  while (!estSurBiscuit()) {
    while (!northfound) {
      while (virages>=0 && !northfound) {
        choix2()
      }
      goNorth()
      if (getY()==0) {northfound=true;droite()}
      while (virages=<4 && !northfound) {choix1()}
      goNorth()
      if (getY()==0) {northfound=true;droite()}
    }
    choix1()
  }
  
  def keepHandOnSideWall(): Boolean = {
    gauche()
    if (estFaceMur()){droite();return true}
    else {droite();return false}
  }
  def choix2() {
    if (estFaceMur() && keepHandOnSideWall()) {
      droite()
      virages-=1
      if (estFaceMur()) {droite();virages-=1}
      else {avance()}
    }
    else if (estFaceMur() && !keepHandOnSideWall()) {
      droite()
      virages-=1
      if (!estFaceMur()) {avance()}
      else {droite();virages-=1}
    }
    else if (!estFaceMur() && keepHandOnSideWall()) {avance()}
    else if (!estFaceMur() && !keepHandOnSideWall()) {droite();avance();virages-=1}
  }
  
  def choix1() {
    if (estFaceMur() && keepHandOnSideWall()) {
      droite()
      virages-=1
      if (estFaceMur()) {droite();virages-=1}
      else {avance()}
    }
    else if (estFaceMur() && !keepHandOnSideWall()) {gauche();avance();virages+=1}
    else if (!estFaceMur() && keepHandOnSideWall()) {avance()}
    else if (!estFaceMur() && !keepHandOnSideWall()) {gauche();avance();virages+=1}
  }
  
  def goNorth() {
    setDirection(Direction.NORTH)
    while (!estFaceMur()) {avance()}
  }

  prendBiscuit()

}